# detection

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/edgevision/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edge_processor.cpp  edge_processor.h  native-lib.cpp
app/src/main/java/com/example/edgevision/: MainActivity.kt
app/src/main/java/com/example/edgevision/camera/: CameraCaptureManager.kt  CameraController.kt  FrameBufferQueue.kt  FrameReader.kt  PreviewSurface.kt
app/src/main/java/com/example/edgevision/gl/: EdgeVisionRenderer.kt  ShaderProgram.kt  TextureManager.kt
app/src/main/java/com/example/edgevision/native/: NativeProcessor.kt
app/src/main/java/com/example/edgevision/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/edgevision/utils/: NetworkUtils.kt
app/src/main/java/com/example/edgevision/websocket/: FrameMessage.kt  FrameWebSocketServer.kt  WebSocketManager.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/edgevision/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  package-lock.json  package.json  styles.css
web/src/: index.ts  viewer.ts  websocket.ts
